--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,29 @@
+
+# 서버 포트번호 설정
+server:
+  port: 80
+  
 spring:
+# JPA 설정
+  jpa:
+    properties:
+      hibernate:
+        format_sql:true
+    show-sql: true
+    hibernate:
+      naming:
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      ddl-auto: none
+      
+# DB 접속을 위한 정보 설정      
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/oral_care
+    username: root
+    password: root
+
+# jsp파일 설정    
   mvc:
     view:
       prefix: /WEB-INF/jsp/
