--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,8 @@ spring:
 
 # jsp파일 설정    
   mvc:
+    # static 보이도록 설정
+    static-path-pattern: /static/**
     view:
       prefix: /WEB-INF/jsp/
       suffix: .jsp
