--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,18 @@ server:
   port: 80
   
 spring:
+# SMTP - 메일 보내기 설정
+  mail:
+    host: smtp.naver.com
+    port: 465
+    username: id@naver.com
+    password: password
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 # JPA 설정
   jpa:
     properties:
