[정은선] #13 이메일로 새로운 비밀번호 발송하는 기능 구현 중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
   mail:
     host: smtp.naver.com
     port: 465
-    username: id@naver.com
-    password: password
+    username: developtest0122@naver.com
+    password: DEVELOPtest0724@
     properties:
       mail:
         smtp:
