--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
       mail:
         smtp:
           auth: true
+          timeout: 5000
           starttls:
             enable: true
 # JPA 설정
