--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
 	
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	
+	implementation("com.googlecode.json-simple:json-simple:1.1.1")
 }
 
 tasks.named('test') {
